fix formatting on smaller screens

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,13 @@
+html body {
+  max-width: 100%;
+  overflow-x: hidden;
+  overflow-wrap: break-word;
+}
+
 body {
   margin: 0;
   color: #d8d8d8;
   background-color: #534a5b;
-  white-space: nowrap;
 }
 
 h3 h4 h5 h6 {
@@ -22,12 +27,12 @@ h3 h4 h5 h6 {
 }
 
 .statline-entry {
-  margin: 0 1rem;
+  margin: 0 0.5rem;
 }
 
 .special-rule {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   align-content: flex-start;
   justify-content: flex-start;
 }
